--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,70 +1,90 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-$primary-color: #2fa8cc;
-$secondary-color: #f4f4f4;
-$box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
-
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: $primary-color;
-  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  font-family: Cambria;
+  color: #1B2522;
+}
+
+.full-screen-header {
+  height: 100vh;
+  background-image: url('../assets/header.jpg');
+  background-size: 100% 100%;
+  /* background-position-y: center; */
+  color: white;
   display: flex;
   flex-direction: column;
+  /* justify-content: center; */
+  align-items: center; 
+} 
+
+.nav {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden;
+  background-color: #1B2522;
+  padding: .5rem 1rem;
+}
+
+.nav-top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.logo {
+  width: 50px;
+}
+
+.nav-list {
   margin: 0;
-  padding: 20px;
+  padding: 0;
+  display: flex;
+  list-style-type: none;
 }
 
-.container {
-  background-color: $secondary-color;
-  border-radius: 10px;
-  box-shadow: $box-shadow;
-  padding: 50px 20px;
-  text-align: center;
-  max-width: 100%;
-  width: 800px;
+.nav-list a {
+  text-decoration: none;
+  margin-left: 1rem;
+  color: white;
 }
 
-h3 {
+.nav-list a:hover {
+  color: #CCC;
+}
+
+.title {
+  font-size: 3rem;
   margin: 0;
-  opacity: 0.5;
-  letter-spacing: 2px;
 }
 
-img {
-  width: 100px;
-  margin-bottom: 20px;
-}
-
-.joke {
-  font-size: 30px;
-  letter-spacing: 1px;
-  line-height: 40px;
-  margin: 50px auto;
-  max-width: 600px;
+.sub-title {
+  font-size: 1.5rem;
+  margin-top: .3rem;
+  margin-bottom: 1rem;
 }
 
 .btn {
-  background-color: $primary-color;
-  color: $secondary-color;
-  border: 0;
-  border-radius: 10px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
-  padding: 14px 40px;
-  font-size: 16px;
+  background-color: hsl(200, 100%, 50%);
+  color: white;
+  border-radius: 10000px;
+  padding: .25em 1em;
+  text-decoration: none;
+  border: none;
   cursor: pointer;
+}
 
-  &:active {
-    transform: scale(0.98);
-  }
+.btn:hover,
+.btn:focus {
+  background-color: hsl(200, 100%, 40%)
+}
 
-  &:focus {
-    outline: 0;
-  }
+.scroll-down-icon {
+  position: absolute;
+  bottom: 1rem;
+  width: 30px;
 }
